fix: collapse widgets

--- a/packages/shared/src/components/utilities.module.css
+++ b/packages/shared/src/components/utilities.module.css
@@ -11,17 +11,18 @@
 
 .pageContainer {
   max-width: $pageMaxWidth;
-
-  &:global(.sidebarRendered) {
-    margin-left: calc(50% - (6.375rem + ($pageMaxWidth / 2)));
-
-    &:global(.sidebarExpanded) {
-      margin-left: calc(50% - (13.75rem + ($pageMaxWidth / 2)));
-    }
-  }
+  margin: auto;
 
   @screen laptopL {
     width: $pageMaxWidth;
+
+    &:global(.sidebarRendered) {
+      margin-left: calc(50% - (6.375rem + ($pageMaxWidth / 2)));
+
+      &:global(.sidebarExpanded) {
+        margin-left: calc(50% - (13.75rem + ($pageMaxWidth / 2)));
+      }
+    }
   }
 
   @screen laptop {
@@ -35,17 +36,13 @@
       }
     }
   }
-
-  @screen tablet {
-    margin: auto;
-  }
 }
 
 .pageWidgets {
   max-width: $pageMaxWidth;
   position: relative;
 
-  @screen laptop {
+  @screen laptopL {
     position: absolute;
     left: 100%;
   }
